cmake_minimum_required(VERSION 2.8)
project( main )
find_package( OpenCV REQUIRED )
#include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( /home/tanuki/opencv-master/platforms/linux/build_hardfp )
add_executable( main main.cpp cv.cpp Bitcraze_PMW3901.c )
target_link_libraries( main ${OpenCV_LIBS} )
#target_link_libraries(main /home/tanuki/arm-build/modules)

message(STATUS "OpenCV_INCLUDE_DIRS = ${OpenCV_INCLUDE_DIRS}")
#message(STATUS "OpenCV_LIBS = ${OpenCV_LIBS}")